@@ -1,3 +1,8 @@
+2006-07-13  Walter Doerwald  <walter@livinglogic.de>
+
+	* IPython/Extensions/ipipe.py (isort): Make isort usable without
+	argument. This sorts the items themselves.
+
 2006-07-12  Walter Doerwald  <walter@livinglogic.de>
 
 	* IPython/Extensions/ipipe.py (eval, ifilter, isort, ieval):
